fixing analyzer issues
Signed-off-by: Marc Handalian <marc.handalian@gmail.com>